# rgb-lightning-sample

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  supervisor.conf
.github/workflows/: build.yml
src/: args.rs  bdk_utils.rs  bitcoind_client.rs  cli.rs  convert.rs  error.rs  main.rs  proxy.rs  rgb_utils.rs  swap.rs
tests/: common.sh  test.sh  tmux.conf
tests/scripts/: close_coop.sh  close_coop_nobtc_acceptor.sh  close_coop_other_side.sh  close_coop_vanilla.sh  close_coop_zero_balance.sh  close_force.sh  close_force_nobtc_acceptor.sh  close_force_other_side.sh  close_force_pending_htlc.sh  close_other_side.sh  close_pending_htlc.sh  close_zero_balance.sh  multi_open_close.sh  multihop.sh  multiple_payments.sh  open_after_double_send.sh  restart.sh  send_payment.sh  send_receive.sh  send_vanilla_payment.sh  swap_roundtrip.sh  swap_roundtrip_buy.sh  swap_roundtrip_fail.sh  swap_roundtrip_fail_amount_maker.sh  swap_roundtrip_fail_amount_taker.sh  swap_roundtrip_multihop_buy.sh  swap_roundtrip_multihop_sell.sh  swap_roundtrip_timeout.sh  unilateral_close.sh  vanilla_keysend.sh
