[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.0.115", features = ["max_level_trace"], path = "./rust-lightning/lightning" }
lightning-block-sync = { version = "0.0.115", features = [ "rpc-client" ] }
lightning-invoice = { version = "0.23", path = "./rust-lightning/lightning-invoice" }
lightning-net-tokio = { version = "0.0.115" }
lightning-persister = { version = "0.0.115", path = "./rust-lightning/lightning-persister" }
lightning-background-processor = { version = "0.0.115", features = [ "futures" ] }
lightning-rapid-gossip-sync = { version = "0.0.115" }

base64 = "0.13.0"
bitcoin_30 = { package = "bitcoin", version = "0.30.0" }
bitcoin = { package = "bitcoin", version = "0.29.2" }
bitcoin-bech32 = "0.12"
bech32 = "0.8"
hex = "0.3"
libc = "0.2"

chrono = "0.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

# RGB and related
amplify = "=4.0.0"
bdk = { version = "0.28", features = ["electrum", "keys-bip39", "sqlite-bundled"] }
bp-core = { version = "=0.10.5", features = ["serde"] }
bp-seals = "=0.10.5"
futures = "0.3"
miniscript = { version = "8.0", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
rgb-contracts = { version = "=0.10.0-rc.2", features = ["all", "electrum"] }
rgb_core = { package = "rgb-core", version = "=0.10.5" }
rgb-schemata = "=0.10.0-rc.1"
rgb-std = { version = "=0.10.3", features = ["all"] }
rgb-wallet = { version = "=0.10.3", features = ["all"] }
serde = { version = "^1.0", features = ["derive"] }
strict_encoding = "=2.5.0"
thiserror = "1.0"
tokio-util = { version = "0.7.4", features = ["codec"] }

[patch.crates-io]
commit_verify = { path = "./client_side_validation/commit_verify" }
lightning = { path = "./rust-lightning/lightning" }
lightning-background-processor = { path = "./rust-lightning/lightning-background-processor"}
rgb-std = { path = "./rgb-wallet/std" }
rgb-wallet = { path = "./rgb-wallet" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
